k8s/custom-manifests/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
