k8s/custom-manifests/testingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`nginx.example.com`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
